edit content html

--- a/index.html
+++ b/index.html
@@ -70,21 +70,19 @@
           alt="avatar"
         />
         <div>
-          <h1>Rendy Faqot</h1>
-          <div>Software Engineer · .NET · Golang · Cloud</div>
+          <h1>Tedi Setiandi</h1>
+          <div>Software Engineer · JavaScript · React · Vue · TypeScript</div>
           <div class="links" style="margin-top: 0.5rem">
-            <a href="https://github.com/your-username" target="_blank"
-              >GitHub</a
-            >
-            <a href="https://www.linkedin.com/in/your-profile" target="_blank"
+            <a href="https://github.com/tedi25" target="_blank">GitHub</a>
+            <a href="https://www.linkedin.com/in/tedi-setiandi" target="_blank"
               >LinkedIn</a
             >
           </div>
           <div class="skills" aria-hidden>
-            <span class="skill">.NET</span>
-            <span class="skill">Golang</span>
-            <span class="skill">Docker</span>
-            <span class="skill">AWS</span>
+            <span class="skill">JavaScript</span>
+            <span class="skill">React</span>
+            <span class="skill">Vue</span>
+            <span class="skill">TypeScript</span>
           </div>
         </div>
       </header>
@@ -97,26 +95,21 @@
       </section>
       <section>
         <h2>Education</h2>
-        <p>Universitas Pendidikan Indonesia — S.Kom, Computer Science</p>
-        <p>Institut Teknologi Bandung — M.T, Teknik Informatika</p>
+        <p>Universitas Kuningan — S.Kom, Teknik Informatika</p>
       </section>
       <section>
         <h2>Projects</h2>
         <ul>
-          <li>
-            <strong>Good Night App</strong> — Sleep tracking API (Rails,
-            Elasticsearch)
-          </li>
-          <li>
-            <strong>Smart Door Lock Simulator</strong> — Face recognition
-            (Dotnet, Emgu.CV)
-          </li>
+          <li><strong>Datangin</strong> — Website for booking tickets</li>
         </ul>
       </section>
       <section>
         <h2>Contact</h2>
         <p>
-          Email: <a href="mailto:rendy@radyalabs.com">rendy@radyalabs.com</a>
+          Email:
+          <a href="mailto:tedisetiandi9925@gmail.com"
+            >tedisetiandi9925@gmail.com</a
+          >
         </p>
       </section>
       <footer>Built with ♥ · Published via GitHub Pages</footer>
