from test conflict

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
       <section>
         <h2>About</h2>
         <p>
-          Passionate software engineer building reliable backend systems. I
+          Passionate software engineer building reliable frontend systems. I
           enjoy clean architecture, distributed systems, and mentoring peers.
         </p>
       </section>
