--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
             <span class="skill">JavaScript</span>
             <span class="skill">React</span>
             <span class="skill">Vue</span>
-            <span class="skill">TypeScript</span>
+            <span class="skill">Java</span>
           </div>
         </div>
       </header>
