change react to next.js

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
           </div>
           <div class="skills" aria-hidden>
             <span class="skill">JavaScript</span>
-            <span class="skill">React</span>
+            <span class="skill">Next.JS</span>
             <span class="skill">Vue</span>
             <span class="skill">TypeScript</span>
           </div>
