--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
             <span class="skill">JavaScript</span>
             <span class="skill">Next.JS</span>
             <span class="skill">Vue</span>
-            <span class="skill">TypeScript</span>
+            <span class="skill">TypeScript 2</span>
           </div>
         </div>
       </header>
