--- a/index.html
+++ b/index.html
@@ -80,9 +80,9 @@
           </div>
           <div class="skills" aria-hidden>
             <span class="skill">JavaScript</span>
-            <span class="skill">Next.JS</span>
+            <span class="skill">React</span>
             <span class="skill">Vue</span>
-            <span class="skill">TypeScript 2</span>
+            <span class="skill">Java</span>
           </div>
         </div>
       </header>
